styles.css
/* ... */
/* RIGHT SECTION */

.right-section {
  width: 300px;
  background: black;
  display: flex;
  flex-flow: column nowrap;
}

.right-section > h1 {
  font-size: 50px;
  text-align: center;
  padding: 0 20px;
  /*border-top-right-radius: 30px;*/
  /*border-top-left-radius: 30px;*/
  box-shadow: 0 0 40px #222 inset;
  color: white;
  background-color: #4e3013;
}

.tabs {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  height: 10%;
  padding-top: 10px;
  background-color: black;
}

.tab {
  height: 100%;
  text-align: center;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
  cursor: pointer;
  flex-grow: 1;
  background-color: darkgrey;
}

.selected {
  background-color: lightgrey;
  border-bottom: none;
}

.tab-content-container {
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  background: linear-gradient(lightgrey, #190800);
}

.tab-content {
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
}

.bold {
  font-family: 'Asap Condensed';
  font-weight: bold;
}

.button {
  font-family: 'Abel';
  width: 100%;
  /*min-width: 300px;*/
  height: 70px;
  margin-bottom: 1px;
  /*border-radius: 5px;*/
  cursor: pointer;
  padding: 5px 20px 5px 0px;
  display: flex;
  flex-flow: column nowrap;
  box-shadow: 0 4px #222;
  justify-content: center;
  background: url('./assets/item-container2.png');
  background-color: snow;
  background-size: 100% 100%;
  box-shadow: 0 0 20px #222 inset;
}

.button:hover {
  box-shadow: 0 0 5px #fff inset;
}

.sprite {
  height: 40px;
  width: 40px;
}

.button-top {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
}

.button-middle {
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  flex-grow: 1;
}

.button-bottom {
  display: none;
}

.upgrades-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
  width: 100%;
}

.upgrade-item-container {
  background: url('./assets/upgrade-item-container.png');
  height: 50px;
  width: 50px;
  background-size: 100% 100%;
  box-shadow: 0 0 30px #222 inset;
  /*margin: 1px;*/
  image-rendering: pixelated;
}

.upgrade-item-container:hover {
  box-shadow: 0 0 10px #fff inset, 0 0 30px #222 inset;
}

.upgrade-item-container:hover .upgrade-item {
  transform: translateY(-1px)
}

.upgrade-item {
  height: 50px;
  width: 50px;
  cursor: pointer;
  image-rendering: pixelated;
}

.tooltip-container {
  display: flex;
  flex-flow: column nowrap;
  padding: 10px;
}

.tooltip-top {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
}

hr {
  border-color: rgba(255, 255, 255, .1);
}

.changelog-wrapper {
  position: fixed;
  top: 0;
  height: 100vh;
  width: 100vw;
  background: rgba(0, 0, 0, 0.5);
  z-index: 99;
}

.changelog-container {
  height: 500px;
  width: 400px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: rgba(255, 255, 255, 0.9);
  overflow-y: auto;
  border: 2px solid black;
  padding: 5px;
}

.changelog-container h1 {
  text-align: center;
  padding: 10px 0;
}

.changelog-container h3 {
  font-size: x-large;
}

.changelog-container p {
  font-size: large;
}

.changelog-footer {
  position: absolute;
  width: 100%;
  text-align: center;
  bottom: 0px;
}

li {
  list-style-type: circle;
}

